feat: 修改了一些逻辑,减少了一些戾气,以一种很平淡的方式给出列表并给出相关警告⚠️

--- a/ptHospitals/index.html
+++ b/ptHospitals/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>莆田系医院列表</title>
 	<style type="text/css">
        body{min-width:330px; min-height:400px; font-size:12px;font-family: "Microsoft YaHei",Arial,sans-serif;}
        .container{padding:20px 20px 0;}
@@ -79,5 +79,5 @@
     </footer>
 </body>
 <script type="text/javascript" src="jquery.min.js"></script>
-<script src="getHospitals.js"></script>
+<script src="hospitals.js"></script>
 </html>
